# stoicsay

./: Cargo.toml  README.md  stoicsay
src/: main.rs
