[package]
name = "stoicsay"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A command line tool to print a random quote from the Stoics"
homepage = "https://github.com/charliesabino/stoicsay"
repository = "https://github.com/charliesabino/stoicsay"
readme = "README.md"
keywords = ["stoicism", "quotes", "command-line", "cli"]
authors = ["Charlie Sabino"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
textwrap = "0.16"
term_size = "0.3.2"
